--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URI=sqlite:///database.db
 SECRET_KEY=this_is_the_secret_key
 ACCESS_TOKEN_KEY=this_is_the_access_token_key
+W3W_API_KEY=1Q7D1SNC
